--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-    "dependencies": {
+  "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,6 +17,7 @@
     "react": "17.0.2",
     "react-content-loader": "^6.2.0",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.40.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.1.2",
