--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.profiles.active=${APP_PROFILE:dev}
 
 spring.jpa.open-in-view=false
 
-security.oauth2.client.client-id=${CLIENT_ID:client-cysne-id}
-security.oauth2.client.client-secret=${CLIENT_SECRET:cysne1234}
+security.oauth2.client.client-id=${CLIENT_ID:test-client-id}
+security.oauth2.client.client-secret=${CLIENT_SECRET:test1234}
 
 jwt.secret=${JWT_SECRET:CYSNE-JWT-SECRET}
 jwt.duration=${JWT_DURATION:32200}
